--- a/hugo.toml
+++ b/hugo.toml
@@ -15,12 +15,12 @@ theme = "tailwind"
   contentTypeName = "posts"
 
   [params.header]
-    logo = "logo.webp"
+    logo = "https://github.com/nonbinarybyte/blog.nonbinarybyte.com/blob/main/android-chrome-512x512.png?raw=true"
     title = "Nonbinarybytes Blog"
 
   [params.footer]
     since = 2025
-    poweredby = false
+    poweredby = true
 
 [menu]
 
