--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "/"
+baseURL = "https://blog.nonbinarybyte.com/"
 title = "Nonbinarybytes Blog"
 author = "Kenny"
 copyright = "nonbinarybyte"
