--- a/hugo.toml
+++ b/hugo.toml
@@ -35,3 +35,7 @@ theme = "tailwind"
 category = "categories"
 tag = "tags"
 series = "series"
+
+[services]
+  [services.disqus]
+    shortname = "kennythefemme"
