--- a/hugo.toml
+++ b/hugo.toml
@@ -38,7 +38,7 @@ series = "series"
 
 [services]
   [services.disqus]
-    shortname = "kennythefemme"
+    shortname = "kenny-10"
     
 [privacy]
   [privacy.disqus]
